# pytests

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  request.json
.github/workflows/: tests.yml
src/api_scoring/: api.py  scoring.py  store.py
tests/: test.py
tests/integration/: test_store_integration.py
tests/unit/: test_scoring.py
