[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "api-scoring"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "aleksei", email = "bscadet@yandex.ru" },
]

requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "flask>=3.1,<4",
  "httpserver>=1.1,<2",
  "redis (>=6.0.0,<7.0.0)",
]

[[tool.poetry.packages]]
include = "api_scoring"
from = "src"

[tool.poetry.scripts]
scoring-api = "api-scoring.api:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
black = "^23.0"
coverage = "^7.0"
pytest-cov = "^4.0"
pre-commit = "^4.2.0"
